fixing spacing 0.0.4

--- a/assets/styles/pages/homepage.less
+++ b/assets/styles/pages/homepage.less
@@ -172,6 +172,10 @@
     .server-list{
       display: block;
     }
+    .card{
+	margin-right: 0 !important;
+	margin-bottom: 40px;
+    }
   }
   @media (min-width: 768px){
     .card {
